= Changelog

== Version 1.1.0

[small]#Released at xx.xx.xxxx#

* Refactored EhCache to Guava Cache (svenkubiak)
* Add a method for adding a complete content map to the template (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/36[#36] Validation now works for numeric values as well (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/37[#37] Added option to set the secure flag for session and auth cookie (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/35[#35] Added method for regular expression to validation (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/34[#34] Added LocalDate and LocalDateTime as request parameter (svenkubiak)
* Version bumps (svenkubiak)
** doctester-core 1.1.6 -> 1.1.8

== Version 1.0.1

[small]#Released at 05.08.2015#

* Fixed typo in archetype that prevented archetype from building (svenkubiak)

== Version 1.0.0

[small]#Released at 31.07.2015#

* Updated documentation (svenkubiak)

== Version 1.0.0-RC5

[small]#Released at 23.07.2015#

* Fixed bug, that prevented dev mode from starting (svenkubiak)
* Updated documentation (svenkubiak)

== Version 1.0.0-RC4

[small]#Released at 23.07.2015#

* Refactored packaging from mangoo.io to io.mangoo (svenkubiak)
* Updated documentation (svenkubiak)
* Sonar refactorings (svenkubiak)
* Added more JavaDoc (svenkubiak)

== Version 1.0.0-RC3

[small]#Released at 10.07.2015#

* Added dispatcher handler and refactored invoking of requesthandler (svenkubiak)
* Added X-XSS-Protection, X-Content-Type-Options and X-Frame-Options headers (svenkubiak)

== Version 1.0.0-RC2

[small]#Released at 07.07.2015#[small]#

* Added some more javadoc (svenkubiak)
* Template engine does not throw generic exception anymore, throws specific ones instead (svenkubiak)
* Version bumps (svenkubiak)
** undertow-core 1.2.7.Final -> 1.2.8.Final
** freemarker 2.3.22 -> 2.3.23 

== Version 1.0.0-RC1

[small]#Released at 03.07.2015#

* Sonar Refactorings (svenkubiak)